IAS-LangLib/src/lang/script/parser/AutoGenParser.output
Terminals unused in grammar

   T_NONE
   "CALL"


State 109 conflicts: 1 shift/reduce
State 266 conflicts: 1 shift/reduce


Grammar

    0 $accept: globals "end of file"

    1 globals: %empty
    2        | globals global

    3 global: import
    4       | typeDefinition
    5       | program
    6       | namespaceDeclaration

    7 import: "IMPORT" qname ";"

    8 typeDefinition: "DEFINE" T_SYMBOL ":" T_STRING "AS" typeDefinitionPropertiesEnclosed ";"
    9               | "DEFINE" T_SYMBOL ":" T_STRING "AS" "EXTENSION" "OF" baseType typeDefinitionPropertiesEnclosed ";"
   10               | "DEFINE" T_SYMBOL ":" T_STRING ";"
   11               | "DEFINE" T_SYMBOL ":" T_STRING "AS" "EXTENSION" "OF" baseType ";"

   12 baseType: T_SYMBOL
   13         | T_SYMBOL ":" T_STRING

   14 typeDefinitionPropertiesEnclosed: "BEGIN" typeDefinitionProperties "END"
   15                                 | "BEGIN" "END"

   16 typeDefinitionProperties: typeDefinitionProperties property ";"
   17                         | %empty

   18 property: T_SYMBOL "AS" T_SYMBOL
   19         | T_SYMBOL "AS" T_SYMBOL ":" T_STRING
   20         | T_SYMBOL "AS" "ARRAY" "OF" T_SYMBOL
   21         | T_SYMBOL "AS" "ARRAY" "OF" T_SYMBOL ":" T_STRING

   22 namespaceDeclaration: "CREATE" "ALIAS" T_STRING "AS" T_STRING ";"

   23 program: "PROGRAM" qname parametersListPar statementsListBeginEnd ";"
   24        | "PROGRAM" qname parametersListPar programResult statementsListBeginEnd ";"
   25        | "PROGRAM" qname parametersListPar "EXTERNAL" T_STRING externalParametersPar ";"
   26        | "PROGRAM" qname parametersListPar programResult "EXTERNAL" T_STRING externalParametersPar ";"

   27 programResult: "RETURNS" T_SYMBOL
   28              | "RETURNS" T_SYMBOL ":" T_STRING
   29              | "RETURNS" "ARRAY" "OF" T_SYMBOL
   30              | "RETURNS" "ARRAY" "OF" T_SYMBOL ":" T_STRING

   31 parametersListPar: "(" parametersList ")"
   32                  | "(" ")"

   33 parametersList: parametersList "," declaration
   34               | declaration

   35 statementsListBeginEnd: "BEGIN" statementsList "END"

   36 statementsList: statementsList statement ";"
   37               | statementsList declaration ";"
   38               | %empty

   39 declaration: "VAR" T_SYMBOL "AS" T_SYMBOL
   40            | "VAR" T_SYMBOL "AS" T_SYMBOL ":" T_STRING
   41            | "VAR" T_SYMBOL "AS" "ARRAY" "OF" T_SYMBOL
   42            | "VAR" T_SYMBOL "AS" "ARRAY" "OF" T_SYMBOL ":" T_STRING

   43 statement: statementsListBeginEnd
   44          | assignment
   45          | condassign
   46          | merge
   47          | forLoop
   48          | whileLoop
   49          | with
   50          | ifThenElse
   51          | index
   52          | call
   53          | external
   54          | create
   55          | delete
   56          | return
   57          | sort
   58          | throw
   59          | tryCatch

   60 assignment: lvalue "= (assignment)" expr

   61 condassign: lvalue "?= (assignment)" xpathAccess

   62 merge: lvalue "MERGE" expr

   63 lvalue: xpathAccess

   64 expr: exprTerm

   65 exprTerm: exprTerm "+" exprTerm
   66         | exprTerm "-" exprTerm
   67         | exprFactor

   68 exprFactor: exprFactor "*" exprFactor
   69           | exprFactor "/" exprFactor
   70           | exprFactor "%" exprFactor
   71           | exprPrimaryOrXPath

   72 exprPrimaryOrXPath: exprPrimary
   73                   | xpathAccess

   74 exprPrimary: "(" expr ")"
   75            | T_INTEGER
   76            | T_LONG
   77            | T_FLOAT
   78            | T_STRING
   79            | T_BOOLEAN
   80            | T_NULL
   81            | "NEW" T_SYMBOL ":" T_STRING
   82            | "NEW" T_SYMBOL ":" T_STRING statementsListBeginEnd
   83            | "(" exprPrimaryOrXPath "AS" baseType ")"
   84            | "(" xpathAccess "OR" exprPrimaryOrXPath ")"
   85            | "(" logicalExpr "?" exprPrimaryOrXPath ":" exprPrimaryOrXPath ")"
   86            | qname exprListPar
   87            | "COPYOF" "(" xpathAccess ")"
   88            | "DETACH" "(" xpathAccess ")"
   89            | "-" exprPrimary
   90            | "SIZEOF" "(" xpathAccess ")"
   91            | "TYPE" "(" expr ")"
   92            | "TYPENS" "(" expr ")"
   93            | "STRLEN" "(" expr ")"

   94 relationalOper: expr "==" expr
   95               | expr "<>" expr
   96               | expr "<=" expr
   97               | expr ">=" expr
   98               | expr "<" expr
   99               | expr ">" expr
  100               | expr "ISTYPE" "(" baseType ")"
  101               | expr "ISINSTANCE" "(" baseType ")"

  102 logicalExprPrimary: relationalOper
  103                   | "(" logicalExpr ")"
  104                   | "NOT" logicalExprPrimary
  105                   | "ISSET" "(" xpathAccess ")"
  106                   | "ISNULL" "(" xpathAccess ")"

  107 logicalExprFactor: logicalExprPrimary
  108                  | logicalExprFactor "AND" logicalExprFactor

  109 logicalExprTerm: logicalExprFactor
  110                | logicalExprTerm "OR" logicalExprTerm

  111 logicalExpr: logicalExprTerm

  112 xpathAccess: xpath
  113            | exprPrimary "." xpath

  114 xpath: xpath "." T_SYMBOL
  115      | xpath "." T_SYMBOL "[" expr "]"
  116      | xpath "." T_SYMBOL "[[" expr "]]"
  117      | T_SYMBOL
  118      | T_SYMBOL "[" expr "]"
  119      | T_SYMBOL "[[" expr "]]"

  120 with: "WITH" xpathAccess "DO" statement
  121     | "WITH" T_SYMBOL "AS" xpathAccess "DO" statement

  122 whileLoop: "WHILE" logicalExpr "DO" statement

  123 forLoop: "FOR" xpathAccess "= (assignment)" expr "TO" expr "DO" statement
  124        | "FOR" xpathAccess "= (assignment)" expr "TO" expr "STEP" expr "DO" statement

  125 ifThenElse: "IF" logicalExpr "THEN" statement
  126           | "IF" logicalExpr "THEN" statement "ELSE" statement

  127 call: qname exprListPar

  128 external: "EXTERNAL" qname exprListPar

  129 create: "CREATE" xpathAccess
  130       | "CREATE" xpathAccess statementsListBeginEnd

  131 delete: "DELETE" xpathAccess

  132 return: "RETURN"
  133       | "RETURN" expr

  134 throw: "THROW" expr

  135 sort: "SORT" xpathAccess "USING" qname

  136 index: "INDEX" xpathAccess "USING" xpathAccess

  137 tryCatch: "TRY" statementsListBeginEnd catchList

  138 catchList: catchList catch
  139          | catch

  140 catch: "CATCH" "(" declaration ")" statementsListBeginEnd

  141 exprListPar: "(" ")"
  142            | "(" exprList ")"

  143 exprList: exprList "," expr
  144         | expr

  145 externalParametersPar: "(" ")"
  146                      | "(" externalParameters ")"

  147 externalParameters: externalParameters "," T_STRING
  148                   | T_STRING

  149 qname: T_SYMBOL
  150      | qname "::" T_SYMBOL


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
T_NONE (258)
"IMPORT" (259) 7
"PROGRAM" (260) 23 24 25 26
"BEGIN" (261) 14 15 35
"END" (262) 14 15 35
"DEFINE" (263) 8 9 10 11
"EXTENSION" (264) 9 11
"ALIAS" (265) 22
"CALL" (266)
"SORT" (267) 135
"MERGE" (268) 62
"USING" (269) 135 136
"INDEX" (270) 136
"FOR" (271) 123 124
"TO" (272) 123 124
"STEP" (273) 124
"WHILE" (274) 122
"DO" (275) 120 121 122 123 124
"IF" (276) 125 126
"THEN" (277) 125 126
"ELSE" (278) 126
"RETURN" (279) 132 133
"THROW" (280) 134
"TRY" (281) 137
"CATCH" (282) 140
"WITH" (283) 120 121
"AS" (284) 8 9 11 18 19 20 21 22 39 40 41 42 83 121
"OF" (285) 9 11 20 21 29 30 41 42
"ARRAY" (286) 20 21 29 30 41 42
"RETURNS" (287) 27 28 29 30
"VAR" (288) 39 40 41 42
"AND" (289) 108
"OR" (290) 84 110
"NOT" (291) 104
"(" (292) 31 32 74 83 84 85 87 88 90 91 92 93 100 101 103 105 106 140
    141 142 145 146
")" (293) 31 32 74 83 84 85 87 88 90 91 92 93 100 101 103 105 106 140
    141 142 145 146
"NEW" (294) 81 82
"SIZEOF" (295) 90
"COPYOF" (296) 87
"DETACH" (297) 88
"CREATE" (298) 22 129 130
"DELETE" (299) 131
"EXTERNAL" (300) 25 26 128
"TYPE" (301) 91
"TYPENS" (302) 92
"ISSET" (303) 105
"ISNULL" (304) 106
"ISTYPE" (305) 100
"ISINSTANCE" (306) 101
"STRLEN" (307) 93
"[" (308) 115 118
"]" (309) 115 118
"[[" (310) 116 119
"]]" (311) 116 119
"+" (312) 65
"-" (313) 66 89
"*" (314) 68
"/" (315) 69
"%" (316) 70
"," (317) 33 143 147
":" (318) 8 9 10 11 13 19 21 28 30 40 42 81 82 85
"::" (319) 150
"." (320) 113 114 115 116
";" (321) 7 8 9 10 11 16 22 23 24 25 26 36 37
"==" (322) 94
"<" (323) 98
"<=" (324) 96
">" (325) 99
">=" (326) 97
"<>" (327) 95
"= (assignment)" (328) 60 123 124
"?= (assignment)" (329) 61
"?" (330) 85
T_SYMBOL (331) 8 9 10 11 12 13 18 19 20 21 27 28 29 30 39 40 41 42
    81 82 114 115 116 117 118 119 121 149 150
T_STRING (332) 8 9 10 11 13 19 21 22 25 26 28 30 40 42 78 81 82 147
    148
T_INTEGER (333) 75
T_LONG (334) 76
T_FLOAT (335) 77
T_BOOLEAN (336) 79
T_NULL (337) 80


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
globals (84)
    on left: 1 2, on right: 0 2
global (85)
    on left: 3 4 5 6, on right: 2
import (86)
    on left: 7, on right: 3
typeDefinition (87)
    on left: 8 9 10 11, on right: 4
baseType (88)
    on left: 12 13, on right: 9 11 83 100 101
typeDefinitionPropertiesEnclosed (89)
    on left: 14 15, on right: 8 9
typeDefinitionProperties (90)
    on left: 16 17, on right: 14 16
property (91)
    on left: 18 19 20 21, on right: 16
namespaceDeclaration (92)
    on left: 22, on right: 6
program (93)
    on left: 23 24 25 26, on right: 5
programResult (94)
    on left: 27 28 29 30, on right: 24 26
parametersListPar (95)
    on left: 31 32, on right: 23 24 25 26
parametersList (96)
    on left: 33 34, on right: 31 33
statementsListBeginEnd (97)
    on left: 35, on right: 23 24 43 82 130 137 140
statementsList (98)
    on left: 36 37 38, on right: 35 36 37
declaration (99)
    on left: 39 40 41 42, on right: 33 34 37 140
statement (100)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59, on right:
    36 120 121 122 123 124 125 126
assignment (101)
    on left: 60, on right: 44
condassign (102)
    on left: 61, on right: 45
merge (103)
    on left: 62, on right: 46
lvalue (104)
    on left: 63, on right: 60 61 62
expr (105)
    on left: 64, on right: 60 62 74 91 92 93 94 95 96 97 98 99 100
    101 115 116 118 119 123 124 133 134 143 144
exprTerm (106)
    on left: 65 66 67, on right: 64 65 66
exprFactor (107)
    on left: 68 69 70 71, on right: 67 68 69 70
exprPrimaryOrXPath (108)
    on left: 72 73, on right: 71 83 84 85
exprPrimary (109)
    on left: 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
    92 93, on right: 72 89 113
relationalOper (110)
    on left: 94 95 96 97 98 99 100 101, on right: 102
logicalExprPrimary (111)
    on left: 102 103 104 105 106, on right: 104 107
logicalExprFactor (112)
    on left: 107 108, on right: 108 109
logicalExprTerm (113)
    on left: 109 110, on right: 110 111
logicalExpr (114)
    on left: 111, on right: 85 103 122 125 126
xpathAccess (115)
    on left: 112 113, on right: 61 63 73 84 87 88 90 105 106 120 121
    123 124 129 130 131 135 136
xpath (116)
    on left: 114 115 116 117 118 119, on right: 112 113 114 115 116
with (117)
    on left: 120 121, on right: 49
whileLoop (118)
    on left: 122, on right: 48
forLoop (119)
    on left: 123 124, on right: 47
ifThenElse (120)
    on left: 125 126, on right: 50
call (121)
    on left: 127, on right: 52
external (122)
    on left: 128, on right: 53
create (123)
    on left: 129 130, on right: 54
delete (124)
    on left: 131, on right: 55
return (125)
    on left: 132 133, on right: 56
throw (126)
    on left: 134, on right: 58
sort (127)
    on left: 135, on right: 57
index (128)
    on left: 136, on right: 51
tryCatch (129)
    on left: 137, on right: 59
catchList (130)
    on left: 138 139, on right: 137 138
catch (131)
    on left: 140, on right: 138 139
exprListPar (132)
    on left: 141 142, on right: 86 127 128
exprList (133)
    on left: 143 144, on right: 142 143
externalParametersPar (134)
    on left: 145 146, on right: 25 26
externalParameters (135)
    on left: 147 148, on right: 146 147
qname (136)
    on left: 149 150, on right: 7 23 24 25 26 86 127 128 135 150


State 0

    0 $accept: . globals "end of file"

    $default  reduce using rule 1 (globals)

    globals  go to state 1


State 1

    0 $accept: globals . "end of file"
    2 globals: globals . global

    "end of file"  shift, and go to state 2
    "IMPORT"       shift, and go to state 3
    "PROGRAM"      shift, and go to state 4
    "DEFINE"       shift, and go to state 5
    "CREATE"       shift, and go to state 6

    global                go to state 7
    import                go to state 8
    typeDefinition        go to state 9
    namespaceDeclaration  go to state 10
    program               go to state 11


State 2

    0 $accept: globals "end of file" .

    $default  accept


State 3

    7 import: "IMPORT" . qname ";"

    T_SYMBOL  shift, and go to state 12

    qname  go to state 13


State 4

   23 program: "PROGRAM" . qname parametersListPar statementsListBeginEnd ";"
   24        | "PROGRAM" . qname parametersListPar programResult statementsListBeginEnd ";"
   25        | "PROGRAM" . qname parametersListPar "EXTERNAL" T_STRING externalParametersPar ";"
   26        | "PROGRAM" . qname parametersListPar programResult "EXTERNAL" T_STRING externalParametersPar ";"

    T_SYMBOL  shift, and go to state 12

    qname  go to state 14


State 5

    8 typeDefinition: "DEFINE" . T_SYMBOL ":" T_STRING "AS" typeDefinitionPropertiesEnclosed ";"
    9               | "DEFINE" . T_SYMBOL ":" T_STRING "AS" "EXTENSION" "OF" baseType typeDefinitionPropertiesEnclosed ";"
   10               | "DEFINE" . T_SYMBOL ":" T_STRING ";"
   11               | "DEFINE" . T_SYMBOL ":" T_STRING "AS" "EXTENSION" "OF" baseType ";"

    T_SYMBOL  shift, and go to state 15


State 6

   22 namespaceDeclaration: "CREATE" . "ALIAS" T_STRING "AS" T_STRING ";"

    "ALIAS"  shift, and go to state 16


State 7

    2 globals: globals global .

    $default  reduce using rule 2 (globals)


State 8

    3 global: import .

    $default  reduce using rule 3 (global)


State 9

    4 global: typeDefinition .

    $default  reduce using rule 4 (global)


State 10

    6 global: namespaceDeclaration .

    $default  reduce using rule 6 (global)


State 11

    5 global: program .

    $default  reduce using rule 5 (global)


State 12

  149 qname: T_SYMBOL .

    $default  reduce using rule 149 (qname)


State 13

    7 import: "IMPORT" qname . ";"
  150 qname: qname . "::" T_SYMBOL

    "::"  shift, and go to state 17
    ";"   shift, and go to state 18


State 14

   23 program: "PROGRAM" qname . parametersListPar statementsListBeginEnd ";"
   24        | "PROGRAM" qname . parametersListPar programResult statementsListBeginEnd ";"
   25        | "PROGRAM" qname . parametersListPar "EXTERNAL" T_STRING externalParametersPar ";"
   26        | "PROGRAM" qname . parametersListPar programResult "EXTERNAL" T_STRING externalParametersPar ";"
  150 qname: qname . "::" T_SYMBOL

    "("   shift, and go to state 19
    "::"  shift, and go to state 17

    parametersListPar  go to state 20


State 15

    8 typeDefinition: "DEFINE" T_SYMBOL . ":" T_STRING "AS" typeDefinitionPropertiesEnclosed ";"
    9               | "DEFINE" T_SYMBOL . ":" T_STRING "AS" "EXTENSION" "OF" baseType typeDefinitionPropertiesEnclosed ";"
   10               | "DEFINE" T_SYMBOL . ":" T_STRING ";"
   11               | "DEFINE" T_SYMBOL . ":" T_STRING "AS" "EXTENSION" "OF" baseType ";"

    ":"  shift, and go to state 21


State 16

   22 namespaceDeclaration: "CREATE" "ALIAS" . T_STRING "AS" T_STRING ";"

    T_STRING  shift, and go to state 22


State 17

  150 qname: qname "::" . T_SYMBOL

    T_SYMBOL  shift, and go to state 23


State 18

    7 import: "IMPORT" qname ";" .

    $default  reduce using rule 7 (import)


State 19

   31 parametersListPar: "(" . parametersList ")"
   32                  | "(" . ")"

    "VAR"  shift, and go to state 24
    ")"    shift, and go to state 25

    parametersList  go to state 26
    declaration     go to state 27


State 20

   23 program: "PROGRAM" qname parametersListPar . statementsListBeginEnd ";"
   24        | "PROGRAM" qname parametersListPar . programResult statementsListBeginEnd ";"
   25        | "PROGRAM" qname parametersListPar . "EXTERNAL" T_STRING externalParametersPar ";"
   26        | "PROGRAM" qname parametersListPar . programResult "EXTERNAL" T_STRING externalParametersPar ";"

    "BEGIN"     shift, and go to state 28
    "RETURNS"   shift, and go to state 29
    "EXTERNAL"  shift, and go to state 30

    programResult           go to state 31
    statementsListBeginEnd  go to state 32


State 21

    8 typeDefinition: "DEFINE" T_SYMBOL ":" . T_STRING "AS" typeDefinitionPropertiesEnclosed ";"
    9               | "DEFINE" T_SYMBOL ":" . T_STRING "AS" "EXTENSION" "OF" baseType typeDefinitionPropertiesEnclosed ";"
   10               | "DEFINE" T_SYMBOL ":" . T_STRING ";"
   11               | "DEFINE" T_SYMBOL ":" . T_STRING "AS" "EXTENSION" "OF" baseType ";"

    T_STRING  shift, and go to state 33


State 22

   22 namespaceDeclaration: "CREATE" "ALIAS" T_STRING . "AS" T_STRING ";"

    "AS"  shift, and go to state 34


State 23

  150 qname: qname "::" T_SYMBOL .

    $default  reduce using rule 150 (qname)


State 24

   39 declaration: "VAR" . T_SYMBOL "AS" T_SYMBOL
   40            | "VAR" . T_SYMBOL "AS" T_SYMBOL ":" T_STRING
   41            | "VAR" . T_SYMBOL "AS" "ARRAY" "OF" T_SYMBOL
   42            | "VAR" . T_SYMBOL "AS" "ARRAY" "OF" T_SYMBOL ":" T_STRING

    T_SYMBOL  shift, and go to state 35


State 25

   32 parametersListPar: "(" ")" .

    $default  reduce using rule 32 (parametersListPar)


State 26

   31 parametersListPar: "(" parametersList . ")"
   33 parametersList: parametersList . "," declaration

    ")"  shift, and go to state 36
    ","  shift, and go to state 37


State 27

   34 parametersList: declaration .

    $default  reduce using rule 34 (parametersList)


State 28

   35 statementsListBeginEnd: "BEGIN" . statementsList "END"

    $default  reduce using rule 38 (statementsList)

    statementsList  go to state 38


State 29

   27 programResult: "RETURNS" . T_SYMBOL
   28              | "RETURNS" . T_SYMBOL ":" T_STRING
   29              | "RETURNS" . "ARRAY" "OF" T_SYMBOL
   30              | "RETURNS" . "ARRAY" "OF" T_SYMBOL ":" T_STRING

    "ARRAY"   shift, and go to state 39
    T_SYMBOL  shift, and go to state 40


State 30

   25 program: "PROGRAM" qname parametersListPar "EXTERNAL" . T_STRING externalParametersPar ";"

    T_STRING  shift, and go to state 41


State 31

   24 program: "PROGRAM" qname parametersListPar programResult . statementsListBeginEnd ";"
   26        | "PROGRAM" qname parametersListPar programResult . "EXTERNAL" T_STRING externalParametersPar ";"

    "BEGIN"     shift, and go to state 28
    "EXTERNAL"  shift, and go to state 42

    statementsListBeginEnd  go to state 43


State 32

   23 program: "PROGRAM" qname parametersListPar statementsListBeginEnd . ";"

    ";"  shift, and go to state 44


State 33

    8 typeDefinition: "DEFINE" T_SYMBOL ":" T_STRING . "AS" typeDefinitionPropertiesEnclosed ";"
    9               | "DEFINE" T_SYMBOL ":" T_STRING . "AS" "EXTENSION" "OF" baseType typeDefinitionPropertiesEnclosed ";"
   10               | "DEFINE" T_SYMBOL ":" T_STRING . ";"
   11               | "DEFINE" T_SYMBOL ":" T_STRING . "AS" "EXTENSION" "OF" baseType ";"

    "AS"  shift, and go to state 45
    ";"   shift, and go to state 46


State 34

   22 namespaceDeclaration: "CREATE" "ALIAS" T_STRING "AS" . T_STRING ";"

    T_STRING  shift, and go to state 47


State 35

   39 declaration: "VAR" T_SYMBOL . "AS" T_SYMBOL
   40            | "VAR" T_SYMBOL . "AS" T_SYMBOL ":" T_STRING
   41            | "VAR" T_SYMBOL . "AS" "ARRAY" "OF" T_SYMBOL
   42            | "VAR" T_SYMBOL . "AS" "ARRAY" "OF" T_SYMBOL ":" T_STRING

    "AS"  shift, and go to state 48


State 36

   31 parametersListPar: "(" parametersList ")" .

    $default  reduce using rule 31 (parametersListPar)


State 37

   33 parametersList: parametersList "," . declaration

    "VAR"  shift, and go to state 24

    declaration  go to state 49


State 38

   35 statementsListBeginEnd: "BEGIN" statementsList . "END"
   36 statementsList: statementsList . statement ";"
   37               | statementsList . declaration ";"

    "BEGIN"     shift, and go to state 28
    "END"       shift, and go to state 50
    "SORT"      shift, and go to state 51
    "INDEX"     shift, and go to state 52
    "FOR"       shift, and go to state 53
    "WHILE"     shift, and go to state 54
    "IF"        shift, and go to state 55
    "RETURN"    shift, and go to state 56
    "THROW"     shift, and go to state 57
    "TRY"       shift, and go to state 58
    "WITH"      shift, and go to state 59
    "VAR"       shift, and go to state 24
    "("         shift, and go to state 60
    "NEW"       shift, and go to state 61
    "SIZEOF"    shift, and go to state 62
    "COPYOF"    shift, and go to state 63
    "DETACH"    shift, and go to state 64
    "CREATE"    shift, and go to state 65
    "DELETE"    shift, and go to state 66
    "EXTERNAL"  shift, and go to state 67
    "TYPE"      shift, and go to state 68
    "TYPENS"    shift, and go to state 69
    "STRLEN"    shift, and go to state 70
    "-"         shift, and go to state 71
    T_SYMBOL    shift, and go to state 72
    T_STRING    shift, and go to state 73
    T_INTEGER   shift, and go to state 74
    T_LONG      shift, and go to state 75
    T_FLOAT     shift, and go to state 76
    T_BOOLEAN   shift, and go to state 77
    T_NULL      shift, and go to state 78

    statementsListBeginEnd  go to state 79
    declaration             go to state 80
    statement               go to state 81
    assignment              go to state 82
    condassign              go to state 83
    merge                   go to state 84
    lvalue                  go to state 85
    exprPrimary             go to state 86
    xpathAccess             go to state 87
    xpath                   go to state 88
    with                    go to state 89
    whileLoop               go to state 90
    forLoop                 go to state 91
    ifThenElse              go to state 92
    call                    go to state 93
    external                go to state 94
    create                  go to state 95
    delete                  go to state 96
    return                  go to state 97
    throw                   go to state 98
    sort                    go to state 99
    index                   go to state 100
    tryCatch                go to state 101
    qname                   go to state 102


State 39

   29 programResult: "RETURNS" "ARRAY" . "OF" T_SYMBOL
   30              | "RETURNS" "ARRAY" . "OF" T_SYMBOL ":" T_STRING

    "OF"  shift, and go to state 103


State 40

   27 programResult: "RETURNS" T_SYMBOL .
   28              | "RETURNS" T_SYMBOL . ":" T_STRING

    ":"  shift, and go to state 104

    $default  reduce using rule 27 (programResult)


State 41

   25 program: "PROGRAM" qname parametersListPar "EXTERNAL" T_STRING . externalParametersPar ";"

    "("  shift, and go to state 105

    externalParametersPar  go to state 106


State 42

   26 program: "PROGRAM" qname parametersListPar programResult "EXTERNAL" . T_STRING externalParametersPar ";"

    T_STRING  shift, and go to state 107


State 43

   24 program: "PROGRAM" qname parametersListPar programResult statementsListBeginEnd . ";"

    ";"  shift, and go to state 108


State 44

   23 program: "PROGRAM" qname parametersListPar statementsListBeginEnd ";" .

    $default  reduce using rule 23 (program)


State 45

    8 typeDefinition: "DEFINE" T_SYMBOL ":" T_STRING "AS" . typeDefinitionPropertiesEnclosed ";"
    9               | "DEFINE" T_SYMBOL ":" T_STRING "AS" . "EXTENSION" "OF" baseType typeDefinitionPropertiesEnclosed ";"
   11               | "DEFINE" T_SYMBOL ":" T_STRING "AS" . "EXTENSION" "OF" baseType ";"

    "BEGIN"      shift, and go to state 109
    "EXTENSION"  shift, and go to state 110

    typeDefinitionPropertiesEnclosed  go to state 111


State 46

   10 typeDefinition: "DEFINE" T_SYMBOL ":" T_STRING ";" .

    $default  reduce using rule 10 (typeDefinition)


State 47

   22 namespaceDeclaration: "CREATE" "ALIAS" T_STRING "AS" T_STRING . ";"

    ";"  shift, and go to state 112


State 48

   39 declaration: "VAR" T_SYMBOL "AS" . T_SYMBOL
   40            | "VAR" T_SYMBOL "AS" . T_SYMBOL ":" T_STRING
   41            | "VAR" T_SYMBOL "AS" . "ARRAY" "OF" T_SYMBOL
   42            | "VAR" T_SYMBOL "AS" . "ARRAY" "OF" T_SYMBOL ":" T_STRING

    "ARRAY"   shift, and go to state 113
    T_SYMBOL  shift, and go to state 114


State 49

   33 parametersList: parametersList "," declaration .

    $default  reduce using rule 33 (parametersList)


State 50

   35 statementsListBeginEnd: "BEGIN" statementsList "END" .

    $default  reduce using rule 35 (statementsListBeginEnd)


State 51

  135 sort: "SORT" . xpathAccess "USING" qname

    "("        shift, and go to state 60
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_LONG     shift, and go to state 75
    T_FLOAT    shift, and go to state 76
    T_BOOLEAN  shift, and go to state 77
    T_NULL     shift, and go to state 78

    exprPrimary  go to state 86
    xpathAccess  go to state 115
    xpath        go to state 88
    qname        go to state 116


State 52

  136 index: "INDEX" . xpathAccess "USING" xpathAccess

    "("        shift, and go to state 60
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_LONG     shift, and go to state 75
    T_FLOAT    shift, and go to state 76
    T_BOOLEAN  shift, and go to state 77
    T_NULL     shift, and go to state 78

    exprPrimary  go to state 86
    xpathAccess  go to state 117
    xpath        go to state 88
    qname        go to state 116


State 53

  123 forLoop: "FOR" . xpathAccess "= (assignment)" expr "TO" expr "DO" statement
  124        | "FOR" . xpathAccess "= (assignment)" expr "TO" expr "STEP" expr "DO" statement

    "("        shift, and go to state 60
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_LONG     shift, and go to state 75
    T_FLOAT    shift, and go to state 76
    T_BOOLEAN  shift, and go to state 77
    T_NULL     shift, and go to state 78

    exprPrimary  go to state 86
    xpathAccess  go to state 118
    xpath        go to state 88
    qname        go to state 116


State 54

  122 whileLoop: "WHILE" . logicalExpr "DO" statement

    "NOT"      shift, and go to state 119
    "("        shift, and go to state 120
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "ISSET"    shift, and go to state 121
    "ISNULL"   shift, and go to state 122
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_LONG     shift, and go to state 75
    T_FLOAT    shift, and go to state 76
    T_BOOLEAN  shift, and go to state 77
    T_NULL     shift, and go to state 78

    expr                go to state 123
    exprTerm            go to state 124
    exprFactor          go to state 125
    exprPrimaryOrXPath  go to state 126
    exprPrimary         go to state 127
    relationalOper      go to state 128
    logicalExprPrimary  go to state 129
    logicalExprFactor   go to state 130
    logicalExprTerm     go to state 131
    logicalExpr         go to state 132
    xpathAccess         go to state 133
    xpath               go to state 88
    qname               go to state 116


State 55

  125 ifThenElse: "IF" . logicalExpr "THEN" statement
  126           | "IF" . logicalExpr "THEN" statement "ELSE" statement

    "NOT"      shift, and go to state 119
    "("        shift, and go to state 120
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "ISSET"    shift, and go to state 121
    "ISNULL"   shift, and go to state 122
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_LONG     shift, and go to state 75
    T_FLOAT    shift, and go to state 76
    T_BOOLEAN  shift, and go to state 77
    T_NULL     shift, and go to state 78

    expr                go to state 123
    exprTerm            go to state 124
    exprFactor          go to state 125
    exprPrimaryOrXPath  go to state 126
    exprPrimary         go to state 127
    relationalOper      go to state 128
    logicalExprPrimary  go to state 129
    logicalExprFactor   go to state 130
    logicalExprTerm     go to state 131
    logicalExpr         go to state 134
    xpathAccess         go to state 133
    xpath               go to state 88
    qname               go to state 116


State 56

  132 return: "RETURN" .
  133       | "RETURN" . expr

    "("        shift, and go to state 60
    "NEW"      shift, and go to state 61
    "SIZEOF"   shift, and go to state 62
    "COPYOF"   shift, and go to state 63
    "DETACH"   shift, and go to state 64
    "TYPE"     shift, and go to state 68
    "TYPENS"   shift, and go to state 69
    "STRLEN"   shift, and go to state 70
    "-"        shift, and go to state 71
    T_SYMBOL   shift, and go to state 72
    T_STRING   shift, and go to state 73
    T_INTEGER  shift, and go to state 74
    T_LONG     shift, and go to state 75
    T_FLOAT    shift, and go to state 76
    T_BOOLEAN  shift, and go to state 77
    T_NULL     shift, and go to state 78

    $default  reduce using rule 132 (return)

    expr                go to state 135
    exprTerm            go to state 124
    exprFactor          go to state 125
    exprPrimaryOrXPath  go to state 126
    exprPrimary         go to state 127
    xpathAccess         go to state 133
    xpath               go to state 88
    qname               go to state 116


State 57

  134 throw: "THROW" . expr
